fixed z-index text header

--- a/src/components/Home/AllowCookies/AllowCookies.styles.scss
+++ b/src/components/Home/AllowCookies/AllowCookies.styles.scss
@@ -14,6 +14,10 @@
   p {
     margin: 0;
     font-size: 16px;
+
+    a{
+      color: var(--black)
+    }
   }
 
   button {
