--- a/src/components/Home/HomeHeader/HomeHeader.styles.scss
+++ b/src/components/Home/HomeHeader/HomeHeader.styles.scss
@@ -46,7 +46,6 @@
   top: 30%;
   font-size: 23px;
   line-height: 1.2;
-  z-index: 9;
   transition: opacity 1s ease-in-out;
   opacity: 1;
 
@@ -71,7 +70,6 @@
   top: 30%;
   font-size: 23px;
   line-height: 1.2;
-  z-index: 9;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 
